--- a/index.html
+++ b/index.html
@@ -9,23 +9,32 @@
 
   <body>
     <section class="container">
+      <div
+        id="successMessage"
+        class="success-message"
+        style="display: none"
+      ></div>
       <div>
         <h1>Contact Us</h1>
       </div>
       <div class="contact-form">
         <div class="form-group">
-          <label for="first-name">First Name*</label>
-          <input type="text" id="first-name" name="first-name" required />
+          <label for="fname">First Name*</label>
+          <input type="text" id="fname" name="fname" required />
+          <span class="error-message"></span>
         </div>
 
         <div class="form-group">
-          <label for="last-name">Last Name*</label>
-          <input type="text" id="last-name" name="last-name" required />
+          <label for="lname">Last Name*</label>
+          <input type="text" id="lname" name="lname" required />
+          <span class="error-message"></span>
         </div>
       </div>
       <div class="email-group">
         <label for="email">Email</label><br />
-        <input type="text" id="email" name="email" /><br />
+        <input type="text" id="email" name="email" />
+        <span class="error-message"></span>
+        <br />
       </div>
 
       <p>Query Type</p>
@@ -51,7 +60,9 @@
       </div>
       <div class="message-group">
         <label for="message">Message</label><br />
-        <input type="text" id="message" name="message" /><br />
+        <input type="text" id="message" name="message" />
+        <span class="error-message"></span>
+        <br />
       </div>
       <div>
         <br />
@@ -62,7 +73,10 @@
         </form>
       </div>
       <br />
-      <div class="button">submit</div>
+      <div>
+        <button id="submitBtn">Submit</button>
+      </div>
     </section>
+    <script src="D:\github\contact-form\contact.js"></script>
   </body>
 </html>
